--- a/public/GENERAL/EDITmode/ADMIN/css/EDITmode.css
+++ b/public/GENERAL/EDITmode/ADMIN/css/EDITmode.css
@@ -11,7 +11,10 @@
     {outline: 1px rgba(255, 255, 255, 0) solid;}
 
 .SING:hover, .ENT:hover
-    {outline: 1px solid #ddd;}
+    {
+    outline: 1px solid #ccc;
+
+}
 
 form[id^="EDITform"]
    {outline: 1px solid #eee;}
@@ -41,17 +44,45 @@ form[id^="EDITform"]:hover > .TOOLSem,
 /*.TOOLSem {float: right; text-align: right;}*/
 .TOOLSem {position: absolute;
           top:0px;
-          left: 0px;
+          right: 0px;
          /* background-color: #E8EDF0;*/
 
-          background-color: #ABBAC4;
-          width: 100%;
+         /* background-color: #ABBAC4;
+          width: 100%;*/
+          padding-left: 20px;
           height: 20px;
           /*border-radius: 2px 2px 0px 0px;*/
           border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+          border-left: 1px solid rgba(255, 255, 255, 0.7);
           /*visibility: hidden;*/
     }
+ /*===================[ TEsting ]=========================*/
+.ELMcontent {padding-top: 0px !important;}
 
+ .TOOLSem {
+     background-color:   rgba(200,200,200,0.8);
+
+     box-shadow: -1px 1px 3px rgba(100,100,100,0.2);
+     border-radius: 0px 0px 0px 4px;
+
+     z-index: 99;
+ }
+
+ form .TOOLSem{
+     top: -23px;
+     height: 21px;
+     border-radius: 0px ;
+     width: 100%;
+     padding: 0px;
+     background-color: #ABBAC4;
+     border-top: 1px solid rgba(0, 0, 0, 0.2);
+     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+   /*  box-shadow: 1px -2px 3px rgba(100,100,100,0.3);*/
+ }
+
+
+
+/*===================================================*/
 
         .TOOLSem > .TOOLSbtn{
             /*padding-top: 1px;*/
@@ -61,11 +92,14 @@ form[id^="EDITform"]:hover > .TOOLSem,
            float: right; }
 
 .allENTS > .TOOLSem {
+         height: 18px;
          padding-top: 3px;
         /* height: 30px;*/
          position: relative;
          margin-bottom: 1px;
-         background-color: #E8EDF0;
+        /* background-color: #E8EDF0;*/
+         background: rgba(100,100,100,0.2);
+         box-shadow: none;
          border-radius: 4px;
         }
 
@@ -97,7 +131,7 @@ form[id^="EDITform"]:hover > .TOOLSem,
  .TOOLSem input[type='button']:hover,
  .TOOLSem input[type=submit]:hover{ cursor: pointer; }
 
- .TOOLSem input.editModeBTT{ background: #D2D6E2 ;}
+ .TOOLSem input.editModeBTT{ background: #e7e8f1 ;}
  .TOOLSem input.editModeBTT:hover{ background:  #F4F5FA ;}
 
 /*________________________[edit button]________________________________________*/
