--- a/public/GENERAL/core/css/core.css
+++ b/public/GENERAL/core/css/core.css
@@ -2,6 +2,8 @@
 /*RESETS */
 p{    margin: 0.5em 0em; }
 
+
+/*============================ [ buttons ] ==============================*/
 input[type="submit"].ivy,
 input[type="reset"].ivy,
 input[type="button"].ivy,
@@ -18,6 +20,61 @@ button.ivy:hover{
     background: rgba(150,150,150,0.7);
 
 }
+
+
+input[type="submit"].ivy-light,
+input[type="reset"].ivy-light,
+input[type="button"].ivy-light,
+button.ivy-light{
+    cursor: pointer;
+    border-radius: 4px;
+    background: rgba(200,200,200,0.6);
+    border: 1px solid rgba(250,250,250,0.3);
+}
+input[type="submit"].ivy-light:hover,
+input[type="reset"].ivy-light:hover,
+input[type="button"].ivy-light:hover,
+button.ivy-light:hover{
+    background: rgba(200,200,200,0.8);
+
+}
+
+
+
+
+/*=========================================================== [ inputs ] =============================================== */
+
+input[type="text"].ivy,
+input[type="password"].ivy,
+textarea.ivy{
+
+    cursor: pointer;
+    border-radius: 3px;
+    background: rgba(150,150,150,0.8);
+    border: 1px solid rgba(200,200,200,0.3);
+}
+
+input[type="text"].ivy-light,
+input[type="password"].ivy-light,
+textarea.ivy-light{
+
+   cursor: pointer;
+   border-radius: 3px;
+   background: rgba(255,255,255,0.6);
+   border: 1px solid rgba(250,250,250,0.3);
+
+}
+
+input[type="text"].ivy-light:focus,
+input[type="password"].ivy-light:focus,
+textarea.ivy-light:focus{
+
+   outline-color: #ffffff;
+   /* outline-offset: 1px;
+*/
+
+}
+
 
 /*===========================================================  =============================================== */
 
