--- a/public/GENERAL/TOOLbar/ADMIN/css/TOOLbarSTYLE.css
+++ b/public/GENERAL/TOOLbar/ADMIN/css/TOOLbarSTYLE.css
@@ -20,7 +20,8 @@ body {margin-top: 31px !important;}
 #admin_TOOLbar > span { display:inline-block; margin-top: 5px;}
 
 
-#admin_TOOLbar > span >*{
+#admin_TOOLbar > span >*
+{
     line-height: 15px;
     padding: 2px 10px;
     margin: 0px 10px;
@@ -33,7 +34,18 @@ body {margin-top: 31px !important;}
     font-size: 8pt;
 
 }
-#admin_TOOLbar > span >*:hover{
+#admin_TOOLbar form {display: inline;}
+
+#admin_TOOLbar form input{
+    background: none;
+    color: inherit;
+    border: none;
+    font-size: inherit;
+    cursor: pointer;
+}
+
+#admin_TOOLbar > span >*:hover
+{
     color:orange;
     cursor: pointer;
 }
