--- a/public/assets/galleria/themes/twelve/galleria.twelve.css
+++ b/public/assets/galleria/themes/twelve/galleria.twelve.css
@@ -15,21 +15,29 @@
 }
 .galleria-stage {
     overflow: hidden;
-    background: rgba(0,0,0,0.9);;
+    background: rgba(255,255,255,0.9) !important;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 30px;
 }
-.galleria-container.fullscreen .galleria-stage { bottom: 0 }
+.galleria-container.fullscreen .galleria-stage {
+    bottom: 45px; 
+    padding-top: 12px; 
+    background: rgba(0,0,0,0.9) !important;
+}
+:-webkit-full-screen {
+    background: #000 !important;
+}
 .galleria-bar {
     height: 31px;
     width: 100%;
     position: absolute;
-    bottom: 0;
+    bottom: -1px !important;
     left: 0;
-    background: url("bar.png") repeat-x scroll 0 -1px #CCCCCC;
+    /*background: url("bar.png") repeat-x scroll 0 -1px #CCCCCC;*/
+    background: #181818;
     z-index: 3;
 }
 /*=====little tiwik======*/
